fixed spacing

--- a/src/components/SettingsComponents/ChangeEmail.css
+++ b/src/components/SettingsComponents/ChangeEmail.css
@@ -6,8 +6,8 @@
     width: 200px;
     height: 200px;
     position: relative;
-    margin-top: 1.5em;
-    left: 7em;
+    margin-top: 2.5em;
+    left: 15em;
 
     
   }
