--- a/src/components/SettingsComponents/Logout.css
+++ b/src/components/SettingsComponents/Logout.css
@@ -7,7 +7,7 @@
     height: 25px;
     position: relative;
     margin-top: 1.5em;
-    left: 7em;
+    left: 15em;
   }
   
   .sotext {
